refactor allevents route to events
